unpackaged/main/default/objects/Account/fields/EBH_ListingLimit__c.field-meta.xml
<CustomField>
    <fullName>EBH_ListingLimit__c</fullName>
    <description>[EBH] (EPH-2201) (EPH-78) - Upper limit of total number of items a seller can list within a month across all eBay sites</description>
    <inlineHelpText>Upper limit of total number of items a seller can list within a month across all eBay sites</inlineHelpText>
    <label>Quantity Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>