unpackaged/main/default/objects/Account/fields/EBH_LLLastWeek1__c.field-meta.xml
<CustomField>
    <fullName>EBH_LLLastWeek1__c</fullName>
    <formula>EBH_LLLastWeek__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average Live Listings over the last retail week.</inlineHelpText>
    <label>Live Listings (Last Week)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>