unpackaged/main/default/objects/Account/fields/EBH_LLLastWeek__c.field-meta.xml
<CustomField>
    <fullName>EBH_LLLastWeek__c</fullName>
    <description>[EBH] Average Live Listings over the last retail week.</description>
    <inlineHelpText>Average Live Listings over the last retail week.</inlineHelpText>
    <label>Live Listings (Last Week)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>