unpackaged/main/default/objects/Account/fields/EBH_LLWithPromotedListings__c.field-meta.xml
<CustomField>
    <fullName>EBH_LLWithPromotedListings__c</fullName>
    <description>[EBH] (EPH-1900) - (Initiatives field from ETL) % LL with Promoted Listings</description>
    <inlineHelpText>Ratio of PLS live listings to PLS eligible listings.</inlineHelpText>
    <label>PLS Listing Adoption</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>