unpackaged/main/default/objects/Account/fields/EBH_LLWithSME__c.field-meta.xml
<CustomField>
    <fullName>EBH_LLWithSME__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[EBH] (EPH-110) - (Initiatives field from ETL) % LL with SME</description>
    <inlineHelpText>Percentage of Listings that have adopted SME (last Retail Week)</inlineHelpText>
    <label>SME Adoption (%)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>