unpackaged/main/default/objects/Account/fields/EBH_Message_For_Opted_Out_Sellers__c.field-meta.xml
<CustomField>
    <fullName>EBH_Message_For_Opted_Out_Sellers__c</fullName>
    <formula>IF(EBH_EmailOut__c == true,(&#39;&lt;html&gt;&lt;body&gt;&lt;div style=&quot;color: red;&quot;&gt;&lt;b&gt;test&lt;/b&gt;&lt;/div&gt;&lt;/body&gt;&lt;/html&gt;&#39;),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBH Message For Opted Out Sellers</label>
    <type>Text</type>
</CustomField>