unpackaged/main/default/objects/Account/fields/EBH_MSKUCompliantPBCPer__c.field-meta.xml
<CustomField>
    <fullName>EBH_MSKUCompliantPBCPer__c</fullName>
    <description>MSKU compliant with PBC Mandate (%)</description>
    <inlineHelpText>Calculation: # variations compliant with PBC / # variations covered by PBC]. 
Values can be &quot;NULL&quot; and between 0% and 100%. A value of &quot;NULL&quot; would mean seller does not have any MSKU listed in a PBC mandatory category.</inlineHelpText>
    <label>MSKU compliant with PBC Mandate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>