unpackaged/main/default/objects/Account/fields/EBH_NumberofContacts__c.field-meta.xml
<CustomField>
    <fullName>EBH_NumberofContacts__c</fullName>
    <description>[EBH] (EPH-5624) - to capture number of contacts</description>
    <label>Number of Contacts</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>