unpackaged/main/default/objects/Account/fields/EBH_NumberofContactsWithMarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>EBH_NumberofContactsWithMarketingOptIn__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[EBH] (EPH-5625) - to capture the number of contacts with Marketing opt in</description>
    <label>Number of Contacts with Marketing Opt-in</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>