unpackaged/main/default/objects/Account/fields/EBH_OracleID__c.field-meta.xml
<CustomField>
    <fullName>EBH_OracleID__c</fullName>
    <description>[EBH] (US-0030) : To store Oracle ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Oracle ID that uniquely identifies a user.</inlineHelpText>
    <label>Oracle ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>