unpackaged/main/default/objects/Account/fields/EBH_ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>EBH_ParentAccount__c</fullName>
    <description>[EBH] (EPH-2914) - Hidden parent account name for targeting engine search</description>
    <formula>Parent.Name</formula>
    <label>Parent Legal Entity</label>
    <type>Text</type>
</CustomField>