unpackaged/main/default/objects/Account/fields/EBH_PartnerType__c.field-meta.xml
<CustomField>
    <fullName>EBH_PartnerType__c</fullName>
    <description>[EBH] (US-0046) : To capture partner type on a Partner record
[#EPH-7476] Partner Record - Enhance fields for Partner Contact Management</description>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Listing Tool</fullName>
            </value>
            <value>
                <fullName>Middleware</fullName>
            </value>
            <value>
                <fullName>Shop Plugin</fullName>
            </value>
            <value>
                <fullName>Shop System</fullName>
            </value>
            <value>
                <fullName>Template Design</fullName>
            </value>
            <value>
                <fullName>Consultancy</fullName>
            </value>
            <value>
                <fullName>Shipping Provider</fullName>
            </value>
            <value>
                <fullName>Listing Optimisation</fullName>
            </value>
            <value>
                <fullName>Integration Partner</fullName>
            </value>
            <value>
                <fullName>Commerce Platform</fullName>
            </value>
            <value>
                <fullName>3PP</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Inventory Management</fullName>
            </value>
            <value>
                <fullName>Reporting Management</fullName>
            </value>
            <value>
                <fullName>Advertising Services ERP</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Promoted Listings Specialist</fullName>
            </value>
            <value>
                <fullName>Full Service Provider</fullName>
                <isActive>false</isActive>
                <label>Full Service Provider</label>
            </value>
            <value>
                <fullName>Sales Service Provider</fullName>
                <isActive>false</isActive>
                <label>Sales Service Provider</label>
            </value>
            <value>
                <fullName>Translation Service Provider</fullName>
                <isActive>false</isActive>
                <label>Translation Service Provider</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>