unpackaged/main/default/objects/Account/fields/EBH_PhoneOut__c.field-meta.xml
<CustomField>
    <fullName>EBH_PhoneOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-2297) - Phone Opt Out</description>
    <inlineHelpText>Sellers who have opted out of receiving marketing calls</inlineHelpText>
    <label>Phone Opt Out</label>
    <type>Checkbox</type>
</CustomField>