unpackaged/main/default/objects/Account/fields/EBH_PositiveFeedback__c.field-meta.xml
<CustomField>
    <fullName>EBH_PositiveFeedback__c</fullName>
    <inlineHelpText>The Positive Feedback percentage is calculated based on the total number of positive and negative Feedback ratings for transactions that ended in the last 12 months.</inlineHelpText>
    <label>Positive Feedback (last 12 months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>