unpackaged/main/default/objects/Account/fields/EBH_PostOut__c.field-meta.xml
<CustomField>
    <fullName>EBH_PostOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-2297) - Post Opt Out</description>
    <inlineHelpText>Sellers who have opted out of receiving physical marketing mail</inlineHelpText>
    <label>Post Opt Out</label>
    <type>Checkbox</type>
</CustomField>