unpackaged/main/default/objects/Account/fields/EBH_PredictedStandard__c.field-meta.xml
<CustomField>
    <fullName>EBH_PredictedStandard__c</fullName>
    <description>[EBH] (US-0032) : to capture Predicted Standard Value</description>
    <inlineHelpText>Sellers predicted performance standard level for the next evaluation cycle based on current trend.</inlineHelpText>
    <label>Predicted Standard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ETRS</fullName>
            </value>
            <value>
                <fullName>Above Standard</fullName>
            </value>
            <value>
                <fullName>Below Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>