unpackaged/main/default/objects/Account/fields/EBH_PrimarySite__c.field-meta.xml
<CustomField>
    <fullName>EBH_PrimarySite__c</fullName>
    <description>[EBH] (US-0030) : To capture primary site information</description>
    <inlineHelpText>Primary Site of the Seller based on transaction share, i.e. majority of transactions.</inlineHelpText>
    <label>Primary Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Belgium (Dutch)</fullName>
            </value>
            <value>
                <fullName>Belgium (French)</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Canada (French)</fullName>
            </value>
            <value>
                <fullName>Ebaymotors</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Switzerland</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Ebay</fullName>
                <label>US</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>