unpackaged/main/default/objects/Account/fields/EBH_QuantityRemaining__c.field-meta.xml
<CustomField>
    <fullName>EBH_QuantityRemaining__c</fullName>
    <description>[EBH] (EPH-78) - % of Quantity Limit remaining for current month</description>
    <inlineHelpText>% of Quantity Limit remaining for current month</inlineHelpText>
    <label>Quantity Remaining %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>