unpackaged/main/default/objects/Account/fields/EBH_QuantityRequested__c.field-meta.xml
<CustomField>
    <fullName>EBH_QuantityRequested__c</fullName>
    <description>[EBH] (EPH-78) - Quantity limit change requested during new listing or revision</description>
    <inlineHelpText>Quantity limit change requested during new listing or revision</inlineHelpText>
    <label>Quantity Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>