unpackaged/main/default/objects/Account/fields/EBH_RegionalSegment__c.field-meta.xml
<CustomField>
    <fullName>EBH_RegionalSegment__c</fullName>
    <description>[EBH] (EPH-2232) - Regional Segment</description>
    <inlineHelpText>This is the Account Manager´s Engagement Level with respect to seller. Values can be Low or High.</inlineHelpText>
    <label>Managed Regional Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>