unpackaged/main/default/objects/Account/fields/EBH_RegistrationCountry__c.field-meta.xml
<CustomField>
    <fullName>EBH_RegistrationCountry__c</fullName>
    <description>[EBH] (US-0031) : Registration Country</description>
    <inlineHelpText>Country where Seller is registered.</inlineHelpText>
    <label>Registration Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>Albania</fullName>
            </value>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>Andorra</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaijan Republic</fullName>
            </value>
            <value>
                <fullName>Bahrain</fullName>
            </value>
            <value>
                <fullName>Belarus</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Benin</fullName>
            </value>
            <value>
                <fullName>Bosnia and Herzegovina</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Bulgaria</fullName>
            </value>
            <value>
                <fullName>Burkina Faso</fullName>
            </value>
            <value>
                <fullName>Burundi</fullName>
            </value>
            <value>
                <fullName>Cameroon</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Cape Verde Islands</fullName>
            </value>
            <value>
                <fullName>Central African Republic</fullName>
            </value>
            <value>
                <fullName>Chad</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Congo, Democratic Republic of the</fullName>
            </value>
            <value>
                <fullName>Congo, Republic of the</fullName>
            </value>
            <value>
                <fullName>Cote d Ivoire (Ivory Coast)</fullName>
            </value>
            <value>
                <fullName>Croatia, Democratic Republic of the</fullName>
            </value>
            <value>
                <fullName>Cyprus</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>