unpackaged/main/default/objects/Account/fields/EBH_RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_RegistrationDate__c</fullName>
    <description>[EBH] (US-0031) : Registration Date</description>
    <inlineHelpText>This is the date the seller is registered on eBay.</inlineHelpText>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>