unpackaged/main/default/objects/Account/fields/EBH_RequestDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_RequestDate__c</fullName>
    <description>[EBH] (EPH-78) - Date the limit was requested</description>
    <inlineHelpText>Date the limit was requested</inlineHelpText>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>