unpackaged/main/default/objects/Account/fields/EBH_RequestStatus__c.field-meta.xml
<CustomField>
    <fullName>EBH_RequestStatus__c</fullName>
    <description>[EBH] (EPH-78) - Request Status</description>
    <label>Request Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>