unpackaged/main/default/objects/Account/fields/EBH_RevenueLast12Months__c.field-meta.xml
<CustomField>
    <fullName>EBH_RevenueLast12Months__c</fullName>
    <description>[EBH] (US-0032) : To capture the revenue information</description>
    <inlineHelpText>Revenue in the last 12 months.</inlineHelpText>
    <label>Revenue (Last 12 Months)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>