unpackaged/main/default/objects/Account/fields/EBH_RevRollup__c.field-meta.xml
<CustomField>
    <fullName>EBH_RevRollup__c</fullName>
    <description>[EBH] (EPH-176) - Rev RollUp</description>
    <inlineHelpText>Where we attribute revenue for the Seller. Revenue is assigned based on seller country.</inlineHelpText>
    <label>Rev RollUp</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CZ</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
            </value>
            <value>
                <fullName>HU</fullName>
            </value>
            <value>
                <fullName>IE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>LU</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>OTHER EA</fullName>
            </value>
            <value>
                <fullName>OTHER EAPAC</fullName>
            </value>
            <value>
                <fullName>OTHER EEMEA</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>RO</fullName>
            </value>
            <value>
                <fullName>ROE -Other</fullName>
            </value>
            <value>
                <fullName>RU</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>SK</fullName>
            </value>
            <value>
                <fullName>TR</fullName>
            </value>
            <value>
                <fullName>UA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>