unpackaged/main/default/objects/Account/fields/EBH_RVSSeller__c.field-meta.xml
<CustomField>
    <fullName>EBH_RVSSeller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-2201) - RVS Seller Flag Y/N</description>
    <inlineHelpText>Sellers who are selected for RVS (eBay Concierge Program).</inlineHelpText>
    <label>RVS Seller</label>
    <type>Checkbox</type>
</CustomField>