unpackaged/main/default/objects/Account/fields/EBH_Segment__c.field-meta.xml
<CustomField>
    <fullName>EBH_Segment__c</fullName>
    <description>[EBH] (US-0031) : Segment</description>
    <inlineHelpText>Seller´s B2C segment for the current month. The B2C seller segmentation categorizes eBay B2C sellers based on their value to their buyers and their GMV. Accounts with at least one sold transaction in the last 12 months are considered for segmentation.</inlineHelpText>
    <label>B2C Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HV-HGMV</fullName>
            </value>
            <value>
                <fullName>HV-LGMV</fullName>
            </value>
            <value>
                <fullName>LV-HGMV</fullName>
            </value>
            <value>
                <fullName>LV-LGMV</fullName>
            </value>
            <value>
                <fullName>TINY-GMV</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>