unpackaged/main/default/objects/Account/fields/EBH_SegmentLM__c.field-meta.xml
<CustomField>
    <fullName>EBH_SegmentLM__c</fullName>
    <description>[EBH] (EPH-2855) - Historical segmentation - LM</description>
    <inlineHelpText>Historical B2C segmentation (This Year Last Month).</inlineHelpText>
    <label>B2C Segment (Last Month)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HV-HGMV</fullName>
            </value>
            <value>
                <fullName>HV-LGMV</fullName>
            </value>
            <value>
                <fullName>LV-HGMV</fullName>
            </value>
            <value>
                <fullName>LV-LGMV</fullName>
            </value>
            <value>
                <fullName>TINY-GMV</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>