unpackaged/main/default/objects/Account/fields/EBH_SellerLapsing__c.field-meta.xml
<CustomField>
    <fullName>EBH_SellerLapsing__c</fullName>
    <description>[EBH] (EPH-2201) - Seller Lapsing Flag</description>
    <inlineHelpText>Based on each Seller´s new listing behaviour in the past 4 quarters to evaluate the status in the current quarter.</inlineHelpText>
    <label>New LL Drop</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>