unpackaged/main/default/objects/Account/fields/EBH_SellerPotentialScore__c.field-meta.xml
<CustomField>
    <fullName>EBH_SellerPotentialScore__c</fullName>
    <description>[EBH] (US-0031) : Seller Potential Score (0-10)</description>
    <inlineHelpText>Probability to become a VIP seller in the future. Score can be between 0 and 1 where 0=Low and 1=High.</inlineHelpText>
    <label>Seller Potential Score (0-1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>