unpackaged/main/default/objects/Account/fields/EBH_SellerType__c.field-meta.xml
<CustomField>
    <fullName>EBH_SellerType__c</fullName>
    <description>[EBH] (EPH-1878) - flag B2C Sellers as B2C</description>
    <inlineHelpText>Business (B2C) or Private (C2C) seller.</inlineHelpText>
    <label>Seller Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
                <default>true</default>
                <label>Business</label>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>