unpackaged/main/default/objects/Account/fields/EBH_SerialF__c.field-meta.xml
<CustomField>
    <fullName>EBH_SerialF__c</fullName>
    <description>[EBH] (EPH-2882) - Hidden field for custom offset</description>
    <formula>VALUE(EBH_Serial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hidden field for custom offset</inlineHelpText>
    <label>Serial #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>