unpackaged/main/default/objects/Account/fields/EBH_ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>EBH_ShippingPostalCode__c</fullName>
    <description>[EBH] (US:0030) - To allow user to enter billing address without text length restrictions for ETL</description>
    <label>Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>