unpackaged/main/default/objects/Account/fields/EBH_SKULL__c.field-meta.xml
<CustomField>
    <fullName>EBH_SKULL__c</fullName>
    <description>[EBH] (US-0032) : to capture Skull information on a Seller record</description>
    <inlineHelpText>Average SKU per Live Listing over the last retail week.</inlineHelpText>
    <label>Avg SKU Per LL (Not Used)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>