unpackaged/main/default/objects/Account/fields/EBH_SKULLF__c.field-meta.xml
<CustomField>
    <fullName>EBH_SKULLF__c</fullName>
    <description>[EBH] (US-0032) : to capture Skull information on a Seller record</description>
    <formula>If( EBH_LLLastWeek__c &gt; 0, ROUND(EBH_AVGLLVRTNCNT__c / EBH_LLLastWeek__c, 2), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average SKU per Live Listing over the last retail week.</inlineHelpText>
    <label>Avg SKU Per LL (Last Week)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>